--- a/public/assets/css/pokeboutique.css
+++ b/public/assets/css/pokeboutique.css
@@ -1,12 +1,39 @@
+body{
+    position: relative;
+}
+
 .navbar-item-custom, .navbar-item-custom a {
     color: white;
 }
 
 .footer-custom {
     text-align: center;
-    position:fixed;
+    position:absolute;
     bottom: 0;
     width: 100%;
     background-color: #dfeaff;
     padding-top: 25px;
+}
+.product-container{
+    margin-bottom: 150px;
+}
+
+.product-item h5{
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-bottom: 1px;
+}
+
+.product-item {
+    margin-top: 50px;
+}
+
+.product-item .product-subtitle {
+    font-size: 14px;
+    display: block;
+    margin-bottom: 10px;
+}
+.product-item .product-price {
+    font-size: 15px;
+    font-weight: bold;
 }
