--- a/public/assets/css/pokeboutique.css
+++ b/public/assets/css/pokeboutique.css
@@ -9,10 +9,11 @@ body{
 .footer-custom {
     text-align: center;
     position:absolute;
-    bottom: 0;
+    
     width: 100%;
     background-color: #dfeaff;
     padding-top: 25px;
+    margin-top: 50px;
 }
 .product-container{
     margin-bottom: 150px;
@@ -36,4 +37,9 @@ body{
 .product-item .product-price {
     font-size: 15px;
     font-weight: bold;
+}
+
+.cart-icon {
+    height: 20px;
+    padding-left: 20px;
 }
