--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -8,8 +8,11 @@
     Bienvenue {{app.user.firstname}} dans votre compte. <br> 
     C'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
     <hr>
+    <a href="/admin">Vous êtes un admin, accéder au backoffice ?</a><br>
+    <hr>
     <a href="{{ path('account_password')}}">Modifier mon mot de passe</a><br>
     <hr>
     <a href="{{ path('account_address')}}">Gérer mes adresses</a><br>
     <hr>
+    <a href="{{ path('account_order')}}">Mes commandes</a><br>
 {% endblock %}
