--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -138,6 +138,7 @@
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js')}}"></script>
+<script type="text/javascript"></script>
 </body>
 {% block script %}
 {% endblock %}
